media queries added

--- a/cafes.html
+++ b/cafes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Maksym Kolisnychenko">
-    <meta name="description" content="Discover the most loved cafes in Haarlem - from hidden gems to popular local favorites.">
+    <meta name="description" content="Discover the most loved cafes in Haarlem &mdash; from hidden gems to popular local favorites.">
     <meta name="keywords" content="cafe, coffee, netherlands, Haarlem">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
@@ -30,6 +30,23 @@
         </nav>
     </header>
 
+    <!-- mobile nav -->
+    <input type="checkbox" id="burger-toggle">
+
+    <label for="burger-toggle" class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
+
+    <nav class="burger-menu">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="cafes.html">Cafes</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <section class="hero">
         <article>
             <figure>
@@ -46,34 +63,34 @@
     <section id="cafes-section" class="cafes">
             <header class="cafe-text">
                 <h1>Top Cafes in Haarlem</h1>
-                <p>Discover the most loved cafes in Haarlem — from hidden gems to popular local favorites. Each place was carefully selected for its cozy atmosphere, great coffee, and welcoming vibe.</p>
-                <p>Whether you're looking for a quiet spot to study, a brunch place with friends, or just the perfect cappuccino, this list will help you find your new favorite cafe in the heart of Haarlem.</p>
+                <p>Discover the most loved cafes in Haarlem &mdash; from hidden gems to popular local favorites. Each place was carefully selected for its cozy atmosphere, great coffee, and welcoming vibe.</p>
+                <p>Whether you&apos;re looking for a quiet spot to study, a brunch place with friends, or just the perfect cappuccino, this list will help you find your new favorite cafe in the heart of Haarlem.</p>
             </header>
         
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/native.png" alt="Native Haarlem - Koffie" title="Native Haarlem - Koffie">
+                    <img src="images/native.png" alt="Native Haarlem &ndash; Koffie" title="Native Haarlem &ndash; Koffie">
                 </figure>
                 <section class="cafe-info">
-                    <h2>Native Haarlem - Koffie</h2>
-                    <p><strong>About:</strong> A cozy specialty coffee bar filled with plants and vintage furniture, located in the heart of Haarlem.
+                    <h2>Native Haarlem &ndash; Koffie</h2>
+                    <p><strong>About&colon;</strong> A cozy specialty coffee bar filled with plants and vintage furniture, located in the heart of Haarlem.
                     They are known for their homemade pastries and freshly roasted beans from local suppliers.
                     </p>
-                    <p><strong>Address:</strong> Breestraat 23, 2011 ZX Haarlem</p>
+                    <p><strong>Address&colon;</strong> Breestraat 23, 2011 ZX Haarlem</p>
                     <a href="https://www.nativehaarlem.nl/" class="details-btn">View Details</a>
                 </section>
             </article>
 
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/mogador.png" alt="Mogador Café" title="Mogador Café">
+                    <img src="images/mogador.png" alt="Mogador Cafe" title="Mogador Cafe">
                 </figure>
                 <section class="cafe-info">
-                    <h2>Mogador Café</h2>
-                    <p><strong>About:</strong> One of Haarlem's classic cafes with a warm, homely atmosphere.
+                    <h2>Mogador Cafe</h2>
+                    <p><strong>About&colon;</strong> One of Haarlem&apos;s classic cafes with a warm, homely atmosphere.
                     Visitors often praise its relaxing environment and friendly staff, making it a popular place to spend a calm afternoon.
                     </p>
-                    <p><strong>Address:</strong> Gasthuisstraat 48, 2011 XP Haarlem</p>
+                    <p><strong>Address&colon;</strong> Gasthuisstraat 48, 2011 XP Haarlem</p>
                     <a href="https://mogadorcafe.nl/" class="details-btn">View Details</a>
                 </section>
             </article>
@@ -84,22 +101,22 @@
                 </figure>
                 <section class="cafe-info">
                     <h2>Blend Haarlem</h2>
-                    <p><strong>About:</strong> A bright, modern cafe serving all-day breakfast, lunch, and fresh smoothies.
-                    Their menu includes vegan and gluten-free options, which makes it a great choice for everyone.
+                    <p><strong>About&colon;</strong> A bright, modern cafe serving all&ndash;day breakfast, lunch, and fresh smoothies.
+                    Their menu includes vegan and gluten&ndash;free options, which makes it a great choice for everyone.
                     </p>
-                    <p><strong>Address:</strong> Kleine Houtstraat 139, Haarlem</p>
+                    <p><strong>Address&colon;</strong> Kleine Houtstraat 139, Haarlem</p>
                     <a href="https://www.blendhaarlem.nl/nl" class="details-btn">View Details</a>
                 </section>
             </article>
     </section>
 
     <aside class="tip">
-        <p><em>Tip:</em> More Haarlem cafes coming soon - stay tuned for weekly updates!</p>
+        <p><em>Tip&colon;</em> More Haarlem cafes coming soon &mdash; stay tuned for weekly updates&#33;</p>
     </aside>
 
     <footer>
         <p class="footer-text">
-            &copy; 2025 CafeFinder NL - Helping you find the best budget cafes in the Netherlands.
+            &copy; 2025 CafeFinder NL &ndash; Helping you find the best budget cafes in the Netherlands.
         </p>
 
         <section class="footer-links">
@@ -108,10 +125,10 @@
         </section>
 
         <section class="footer-socials">
-            <a href="https://www.instagram.com" target="_blank">
+            <a href="https://www.instagram.com" target="blank">
                 <img src="images/instagram.png" alt="Instagram" title="instagram">
             </a>
-            <a href="https://www.facebook.com" target="_blank">
+            <a href="https://www.facebook.com" target="blank">
                 <img src="images/facebook.png" alt="Facebook" title="facebook">
             </a>
         </section>
