--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Maksym Kolisnychenko">
-    <meta name="description" content="Find the best cafés and restaurants in Haarlem - reliable reviews, vegan options, and budget-friendly places.">
+    <meta name="description" content="Find the best cafés and restaurants in Haarlem &mdash; reliable reviews, vegan options, and budget-friendly places.">
     <meta name="keywords" content="Haarlem cafes, restaurants, coffee, vegan cafes, best cafes in Haarlem, Netherlands">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
@@ -30,6 +30,22 @@
             </ul>
         </nav>
     </header>
+    <!-- mobile nav -->
+    <input type="checkbox" id="burger-toggle">
+
+    <label for="burger-toggle" class="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
+
+    <nav class="burger-menu">
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="cafes.html">Cafes</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>  
 
     <section class="hero-home">
         <figure>
@@ -42,7 +58,7 @@
                 <span class="break">in Haarlem</span>
             </h1>
             <p>
-                Reliable reviews and budget-friendly choices
+                Reliable reviews and budget&ndash;friendly choices
                 <span class="break">for tourists, students, and vegans.</span>
             </p>
             <a href="cafes.html" class="hero-btn">See Cafes</a>
@@ -58,11 +74,11 @@
         <article>
             <p>
                 At CafeScout Haarlem, we make it simple to explore the best cafes and restaurants across the city
-                — from quiet corners for study sessions to lively brunch spots.
+                &mdash; from quiet corners for study sessions to lively brunch spots.
             </p>
             <p>
                 Our platform highlights both local favorites and hidden gems, including <em>vegan</em> and <em>vegetarian</em> options,
-                with details on each cafe's menu, atmosphere, and opening hours.
+                with details on each cafe&apos;s menu, atmosphere, and opening hours.
             </p>
         </article>
     </section>
@@ -72,7 +88,7 @@
         <article class="info-text">
             <p>
                 You can read reviews, share your own experiences, and even save your favorite spots for later.
-                Whether you're visiting Haarlem or a local searching for a new coffee ritual, we help you find
+                Whether you&apos;re visiting Haarlem or a local searching for a new coffee ritual, we help you find
                 places that fit your mood, taste, and budget.
             </p>
         </article>
@@ -86,7 +102,7 @@
     <section class="closing-text">
         <article>
             <p>
-                HaarlemCafes brings together comfort, community, and good coffee —  
+                HaarlemCafes brings together comfort, community, and good coffee &mdash;  
                 so every cup feels like home.
             </p>
 
@@ -96,7 +112,7 @@
 
     <footer>
         <p class="footer-text">
-            &copy; 2025 CafeFinder NL — Helping you find the best budget cafes in the Netherlands.
+            &copy; 2025 CafeFinder NL &mdash; Helping you find the best budget cafes in the Netherlands.
         </p>
 
         <section class="footer-links">
@@ -105,10 +121,10 @@
         </section>
 
         <section class="footer-socials">
-            <a href="https://www.instagram.com" target="_blank">
+            <a href="https://www.instagram.com" target="blank">
                 <img src="images/instagram.png" alt="Instagram">
             </a>
-            <a href="https://www.facebook.com" target="_blank">
+            <a href="https://www.facebook.com" target="blank">
                 <img src="images/facebook.png" alt="Facebook">
             </a>
         </section>
