--- a/cafes.html
+++ b/cafes.html
@@ -7,18 +7,18 @@
     <meta name="keywords" content="cafe, coffee, netherlands, Haarlem">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
-    <link rel="icon" type="image/png" href="images/Logo.png">
+    <link rel="icon" type="image/png" href="img/Logo.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header class="menu">
         <figure class="logo">
             <a href="home.html">
-                <img src="images/Logo.png" alt="Logo" title="logo" id="logo-img">
-                <figcaption>
-                    HaarlemCafes
-                </figcaption>
+                <img src="img/Logo.png" alt="Logo" title="logo" id="logo-img">
             </a>
+            <figcaption>
+                    HaarlemCafes
+            </figcaption>
         </figure>
 
         <nav>
@@ -50,7 +50,7 @@
     <section class="hero">
         <article>
             <figure>
-                <img src="images/haarlembanner.png" alt="Haarlem City" title="Haarlem city" class="hero-img">
+                <img src="img/haarlembanner.png" alt="Haarlem City" title="Haarlem city" class="hero-img">
             </figure>
             <header class="hero-content">
                 <h1>List of cafes sorted by price</h1>
@@ -69,7 +69,7 @@
         
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/native.png" alt="Native Haarlem &ndash; Koffie" title="Native Haarlem &ndash; Koffie">
+                    <img src="img/native.png" alt="Native Haarlem &ndash; Koffie" title="Native Haarlem &ndash; Koffie">
                 </figure>
                 <section class="cafe-info">
                     <h2>Native Haarlem &ndash; Koffie</h2>
@@ -83,7 +83,7 @@
 
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/mogador.png" alt="Mogador Cafe" title="Mogador Cafe">
+                    <img src="img/mogador.png" alt="Mogador Cafe" title="Mogador Cafe">
                 </figure>
                 <section class="cafe-info">
                     <h2>Mogador Cafe</h2>
@@ -97,7 +97,7 @@
 
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/blend.png" alt="Blend Haarlem" title="Blend Haarlem">
+                    <img src="img/blend.png" alt="Blend Haarlem" title="Blend Haarlem">
                 </figure>
                 <section class="cafe-info">
                     <h2>Blend Haarlem</h2>
@@ -126,10 +126,10 @@
 
         <section class="footer-socials">
             <a href="https://www.instagram.com" target="blank">
-                <img src="images/instagram.png" alt="Instagram" title="instagram">
+                <img src="img/instagram.png" alt="Instagram" title="instagram">
             </a>
             <a href="https://www.facebook.com" target="blank">
-                <img src="images/facebook.png" alt="Facebook" title="facebook">
+                <img src="img/facebook.png" alt="Facebook" title="facebook">
             </a>
         </section>
     </footer>
