--- a/contact.html
+++ b/contact.html
@@ -7,18 +7,18 @@
     <meta name="keywords" content="contact, Haarlem cafes, email, message, support, Netherlands">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact — Cafe Finder</title>
-    <link rel="icon" type="image/png" href="images/Logo.png">
+    <link rel="icon" type="image/png" href="img/Logo.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <header class="menu">
         <figure class="logo">
             <a href="home.html">
-                <img src="images/Logo.png" alt="Logo" title="logo" id="logo-img">
-                <figcaption>
-                    HaarlemCafes
-                </figcaption>
+                <img src="img/Logo.png" alt="Logo" title="logo" id="logo-img">
             </a>
+            <figcaption>
+                    HaarlemCafes
+            </figcaption>
         </figure>
 
         <nav>
@@ -53,7 +53,7 @@
     </section>
 
     <figure class="contact-image">
-        <img src="images/contactbanner.png" alt="Contact Us image" title="Get in touch">
+        <img src="img/contactbanner.png" alt="Contact Us image" title="Get in touch">
     </figure>
 
     <form action="#" method="post" id="contact-form">
@@ -94,9 +94,9 @@
     <section class="contact-details">
         <h2>Contact Details</h2>
         <ul>
-            <li><img src="/images/mail.png" alt="email icon" class="icon"> Email: <strong>support&#64;haarlemcafes.nl</strong></li>
-            <li><img src="/images/phone-call.png" alt="phone icon" class="icon"> <strong>&#43;31 612345678</strong></li>
-            <li><img src="/images/location.png" alt="Location icon" class="icon"> Location:<strong>Haarlem, NL</strong></li>
+            <li><img src="/img/mail.png" alt="email icon" class="icon"> Email: <strong>support&#64;haarlemcafes.nl</strong></li>
+            <li><img src="/img/phone-call.png" alt="phone icon" class="icon"> <strong>&#43;31 612345678</strong></li>
+            <li><img src="/img/location.png" alt="Location icon" class="icon"> Location:<strong>Haarlem, NL</strong></li>
         </ul>
     </section>
 
@@ -112,10 +112,10 @@
 
         <section class="footer-socials">
             <a href="https://www.instagram.com" target="blank">
-                <img src="images/instagram.png" alt="Instagram" title="instagram">
+                <img src="img/instagram.png" alt="Instagram" title="instagram">
             </a>
             <a href="https://www.facebook.com" target="blank">
-                <img src="images/facebook.png" alt="Facebook" title="facebook">
+                <img src="img/facebook.png" alt="Facebook" title="facebook">
             </a>
         </section>
     </footer>
