--- a/home.html
+++ b/home.html
@@ -9,17 +9,15 @@
     <title>Cafe Finder</title>
 
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link rel="icon" type="image/png" href="images/Logo.png">
+    <link rel="icon" type="image/png" href="img/Logo.png">
 </head>
 <body>
     <header class="menu">
         <figure class="logo">
             <a href="home.html">
-                <img src="images/Logo.png" alt="Logo" title="logo" id="logo-img">
-                <figcaption>
-                    HaarlemCafes
-                </figcaption>
+                <img src="img/Logo.png" alt="Logo" title="logo" id="logo-img">  
             </a>
+            <figcaption>HaarlemCafes</figcaption>
         </figure>
 
         <nav>
@@ -49,7 +47,7 @@
 
     <section class="hero-home">
         <figure>
-            <img src="images/homebanner.png" alt="Coffee cup in cafe" title="Haarlem cafes" class="hero-home-img">
+            <img src="img/homebanner.png" alt="Coffee cup in cafe" title="Haarlem cafes" class="hero-home-img">
         </figure>
 
         <header class="hero-home-content">
@@ -94,7 +92,7 @@
         </article>
 
         <figure class="info-image">
-            <img src="/images/patisserie.png" alt="Haarlem patisserie" title="Popular cafe in Haarlem">
+            <img src="/img/patisserie.png" alt="Haarlem patisserie" title="Popular cafe in Haarlem">
         </figure>
     </section>
 
@@ -122,10 +120,10 @@
 
         <section class="footer-socials">
             <a href="https://www.instagram.com" target="blank">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="img/instagram.png" alt="Instagram">
             </a>
             <a href="https://www.facebook.com" target="blank">
-                <img src="images/facebook.png" alt="Facebook">
+                <img src="img/facebook.png" alt="Facebook">
             </a>
         </section>
     </footer>
