--- a/cafes.html
+++ b/cafes.html
@@ -110,6 +110,45 @@
             </article>
     </section>
 
+    <section class="price-table">
+        <header>
+            <h2>Coffee Price Comparison</h2>
+            <p>Average drink prices in Haarlem cafes</p>
+        </header>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Cafe Name</th>
+                    <th>Espresso &euro;</th>
+                    <th>Cappuccino &euro;</th>
+                    <th>Latte &euro;</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Native</td>
+                    <td>2.40</td>
+                    <td>3.00</td>
+                    <td>3.20</td>
+                </tr>
+                <tr>
+                    <td>Mogador</td>
+                    <td>2.30</td>
+                    <td>2.90</td>
+                    <td>3.10</td>
+                </tr>
+                <tr>
+                    <td>Blend</td>
+                    <td>2.50</td>
+                    <td>3.10</td>
+                    <td>3.30</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
     <aside class="tip">
         <p><em>Tip&colon;</em> More Haarlem cafes coming soon &mdash; stay tuned for weekly updates&#33;</p>
     </aside>
