--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <header class="menu">
         <figure class="logo">
-            <a href="home.html">
+            <a href="index.html">
                 <img src="img/Logo.png" alt="Logo" title="logo" id="logo-img">
             </a>
             <figcaption>
@@ -23,7 +23,7 @@
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="cafes.html">Cafes</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
@@ -41,7 +41,7 @@
 
     <nav class="burger-menu">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="cafes.html">Cafes</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
