--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="menu">
         <figure class="logo">
-            <a href="home.html">
+            <a href="index.html">
                 <img src="img/Logo.png" alt="Logo" title="logo" id="logo-img">  
             </a>
             <figcaption>HaarlemCafes</figcaption>
@@ -22,7 +22,7 @@
 
         <nav>
             <ul>
-                <li><a href="home.html" class="active">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="cafes.html">Cafes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -39,7 +39,7 @@
 
     <nav class="burger-menu">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="cafes.html">Cafes</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
