--- a/contact.html
+++ b/contact.html
@@ -94,9 +94,9 @@
     <section class="contact-details">
         <h2>Contact Details</h2>
         <ul>
-            <li><img src="/img/mail.png" alt="email icon" class="icon"> Email: <strong>support&#64;haarlemcafes.nl</strong></li>
-            <li><img src="/img/phone-call.png" alt="phone icon" class="icon"> <strong>&#43;31 612345678</strong></li>
-            <li><img src="/img/location.png" alt="Location icon" class="icon"> Location:<strong>Haarlem, NL</strong></li>
+            <li><img src="img/mail.png" alt="email icon" class="icon"> Email: <strong>support&#64;haarlemcafes.nl</strong></li>
+            <li><img src="img/phone-call.png" alt="phone icon" class="icon"> <strong>&#43;31 612345678</strong></li>
+            <li><img src="img/location.png" alt="Location icon" class="icon"> Location:<strong>Haarlem, NL</strong></li>
         </ul>
     </section>
 
