--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </article>
 
         <figure class="info-image">
-            <img src="/img/patisserie.png" alt="Haarlem patisserie" title="Popular cafe in Haarlem">
+            <img src="img/patisserie.png" alt="Haarlem patisserie" title="Popular cafe in Haarlem">
         </figure>
     </section>
 
